Version 4.0.0: Support Vaadin 25, works without theme, and with both Aura and Lumo themes.